fix(search-result): left align search result title

--- a/src/scripts/components/main/search-result/search-result.module.css
+++ b/src/scripts/components/main/search-result/search-result.module.css
@@ -11,14 +11,13 @@
     padding: 8px 12px;
     margin-bottom: 8px;
     border-radius: 8px;
+    text-align: left;
 
     @media screen and (--desktop-viewport) {
         margin-bottom: 16px;
     }
 
     > strong {
-        display: block;
-        text-align: left;
         color: var(--light-green);
     }
 }
@@ -43,7 +42,6 @@
     line-clamp: 2;
     -webkit-box-orient: vertical;
     line-height: 1.4;
-    text-align: left;
 }
 
 .matchKey {
